<resources>
    <string name="app_name">QPOS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_psamcardreader">PSAM卡</string>
    <string name="test_magstripecardreader">磁条卡</string>
    <string name="test_contacltesscardreader">非接卡</string>
    <string name="test_smartcardreader">IC卡</string>
    <string name="test_pinpad">密码键盘</string>
    <string name="test_printer">打印机</string>
    <string name="test_idc">二代证</string>
    <string name="test_emv">EMV</string>
    <string name="button_camera_scan_test">扫码</string>
     <string name="test_idcard">身份证</string>
    <string name="test_serialport">串口</string>
    <string name="test_systemmanager">系统管理</string>
    <string name="test_hwsecurity">安全模块</string>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="title_activity_all_card">AllCardActivity</string>
    <string name="title_activity_read_card">ReadCardActivity</string>
    <string name="test_scan">Scan</string>
    <string name="test_scan_back">Back-facing</string>
    <string name="test_scan_front">Front-facing</string>
    <string name="info_scan_success">Scan success</string>
    <string name="info_scan_failed">Scan failed</string>
    <string name="info_scan_timeout">Scan time out</string>
    <string name="info_scan_cancle">Scan cancle</string>
    <string name="info_scan_used">Device used</string>
    <string name="info_print_times">Loop Print</string>
    <string name="test_d5000">D5000 printer(outlay)</string>
    <string name="test_interface">MK21 CPU functions</string>
    <string name="test_d5000_content">ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="test_zt_566_no">System lakes of some necessary files!</string>
    <string name="btn_card_check">Start Test</string>
    <string name="btn_card_volt">Set Solt Volt</string>
    <string name="btn_card_close">Stop Test</string>
    <string name="btn_clear_content">Clear Screen</string>
    <string name="btn_printer_open">Open Device</string>
    <string name="btn_printer_clsoe">Close Device</string>
    <string name="btn_printer_print">Start Print</string>
    <string name="btn_emv_start">EMV Online Transaction</string>
    <string name="btn_emv_close">Close Process</string>
    <string name="btn_electronic_cash">Electronic cash transaction</string>
    <string name="btn_electronic_cash_inquiry">Electronic cash inquiry</string>
    <string name="btn_emv_setting_param">Set parameters</string>
    <string name="info_emv_elect_cash_balance">Electronic cash balance</string>
    <string name="info_emv_input_pwd">Please input a password</string>
    <string name="info_emv_transformation_ret">Trading results：</string>
    <string name="info_get_electro_cash">Electronic cash inquiry is watting for card...</string>
    <string name="info_emv_elect_trans_wait_card">Electronic cash transactions and other cards...</string>
    <string name="btn_k21_set_time">SetTime</string>
    <string name="btn_k21_get_time">GetTime</string>
    <string name="btn_k21_set_sn">SetSN</string>
    <string name="btn_k21_get_sn">GetSN</string>
    <string name="btn_k21_en_usb">EnableUSB</string>
    <string name="btn_k21_fb_usb">ForbidUSB</string>
    <string name="btn_k21_en_uart">EnableUART</string>
    <string name="btn_k21_fb_uart">ForbidUART</string>
    <string name="btn_k21_en_tp_key">EnableTPKey</string>
    <string name="btn_k21_fb_tp_key">ForbidTPKey</string>
    <string name="btn_idc_start">Scan ID card</string>
    <string name="msg_idc_start">Start scanning ID card.....</string>
    <string name="msg_idc_start_error">Fail to scan ID card!</string>
    <string name="msg_idc_place">Please put ID card on induction zone.....</string>
    <string name="msg_idc_rec">Recognizing ID card .....</string>
    <string name="msg_idc_read">Reading ID card information.....</string>
    <string name="msg_idc_display">ID information as shown in the left window</string>
    <string name="msg_d5000_close_success">Close D5000 printer success!</string>
    <string name="msg_d5000_close_errors">Close D5000 printer error!</string>
    <string name="msg_d5000_open_success">Open D5000 printer success!</string>
    <string name="msg_d5000_open_error">Open D5000 printer error!</string>
    <string name="msg_emv_wait_card">Waiting for card.....</string>
    <string name="msg_emv_load_para_error">Load EMV parameters error!</string>
    <string name="msg_emv_init_aid">Init AID[</string>
    <string name="msg_emv_init_capk">Init CAPK [</string>
    <string name="msg_emv_init_teminal">Init terminal parameters :</string>
    <string name="msg_emv_sum_up">Total  </string>
    <string name="msg_emv_apps">  apps , </string>
    <string name="msg_emv_chose_app">Apps choice : </string>
    <string name="msg_emv_card_num">CardNumber:</string>
    <string name="msg_emv_trade_over">Trade success!</string>
    <string name="msg_emv_chose_app_error">Chose apps error!</string>
    <string name="msg_emv_card_outofdate">Card is out of date!</string>
    <string name="msg_emv_app_locked">Apps are locked!</string>
    <string name="msg_emv_not_accepted">Trade is not accepted!</string>
    <string name="msg_emv_pin_time_out">PIN is out of time!</string>
    <string name="btn_pinpad_open">Open Device</string>
    <string name="btn_pinpad_close">Close Device</string>
    <string name="btn_pinpad_main_key">Main Key</string>
    <string name="btn_pinpad_work_keu">Work Key</string>
    <string name="btn_pinpad_encrypt">Encrypt</string>
    <string name="btn_pinpad_show_test">Show Text</string>
    <string name="btn_pinpad_cal_mac">Cal MAC</string>
    <string name="btn_pinpad_cal_pin">Cal PIN</string>
    <string name="msg_pinpad_pin_result">PIN result:</string>
    <string name="msg_pinpad_pin_result_error">PIN result is error!</string>
    <string name="msg_pinpad_pin_prompt">Please operate according to keyboard prompt!</string>
    <string name="msg_pinpad_mac_data">MAC data need to calculate is:</string>
    <string name="msg_pinpad_mac_result_1">The result is:</string>
    <string name="msg_pinpad_mac_result_2">The result is:Calculate MAC is error!</string>
    <string name="msg_pinpad_encrypt_data">Data need to encrypt is:</string>
    <string name="msg_pinpad_encrypt_result_1">The result is:</string>
    <string name="msg_pinpad_encrypt_result_2">The result is:Encrypt data error!</string>
    <string name="msg_pinpad_main_key_succ">Download main key success!</string>
    <string name="msg_pinpad_main_key_error">Download main key error!</string>
    <string name="msg_pinpad_wk_chose_0">Chose work key 0 --></string>
    <string name="msg_pinpad_wk_chose_1">Chose work key 1 --></string>
    <string name="msg_pinpad_wk_chose_2">Chose work key 2 --></string>
    <string name="msg_pinpad_wk_0_succ">Download work key 0 success!</string>
    <string name="msg_pinpad_wk_1_succ">Download work key 1 success!</string>
    <string name="msg_pinpad_wk_2_succ">Download work key 2 success!</string>
    <string name="msg_pinpad_wk_0_error">Download work key 0 error!</string>
    <string name="msg_pinpad_wk_1_error">Download work key 1 error!</string>
    <string name="msg_pinpad_wk_2_error">Download work key 2 error!</string>
    <string name="msg_pinpad_wk_error">Download work key error!</string>
    <string name="msg_pinpad_close_succ">Close device success!</string>
    <string name="msg_pinpad_close_error">Close device error!</string>
    <string name="msg_pinpad_show_succ">Show text success!</string>
    <string name="msg_pinpad_show_error">Show text error!</string>
    <string name="msg_pinpad_open_succ">Open device success!</string>
    <string name="msg_pinpad_open_error">Open device error!</string>
    <string name="msg_printer_has_paper">Printer has paper!</string>
    <string name="msg_printer_lake_paper">Printer lakes of paper!</string>
    <string name="msg_printer_unknow_status">Unknown printer status!</string>
    <string name="msg_printer_open_error">Open device error!</string>
    <string name="msg_printer_close_succ">Close device success!</string>
    <string name="msg_printer_clsoe_error">Close device error!</string>
    <string name="msg_printer_print_succ">Printer printing success!</string>
    <string name="msg_printer_print_error">Printer printing error!</string>
    <string name="msg_card_read_error">Read card error!</string>
    <string name="msg_card_read_succ">Read card success!</string>
    <string name="msg_card_time_out">Read card time out!</string>
    <string name="msg_card_close_succ">Close device success!</string>
    <string name="msg_card_force_close">Device Force Close!</string>
    <string name="msg_card_verify_pass_succ">Verify password success!</string>
    <string name="msg_card_write_op_error">Write operation error!</string>
    <string name="msg_card_read_op_error">Read operation error!</string>
    <string name="msg_card_verify_pass_error">Verify password error!</string>
    <string name="msg_card_exe_apdu_error">Execute APDU error!</string>
    <string name="msg_card_unplug_card">Card pulled out!</string>
    <string name="msg_card_open_success">Open device success!</string>
    <string name="msg_card_wait_for_card">Waiting for card.....</string>
    <string name="msg_card_open_error">Open device error!</string>
    <string name="info_readcard_stop_test">Stop detection</string>
    <string name="info_mag_open">open device</string>
    <string name="info_mag_close">close device</string>
    <string name="info_mag_waitforcard">Please swipe</string>
    <string name="info_mag_get_track">Get track data</string>
    <string name="info_set_mag_type">Set magnetic card type</string>
    <string name="info_card_poweron">Power on</string>
    <string name="info_card_poweroff">Power off</string>
    <string name="info_card_apdu">Execute APDU</string>
    <string name="info_card_cpu">CPU Card</string>
    <string name="info_card_mifare">MIFARE Card</string>
    <string name="info_card_type">Device typ</string>
    <string name="info_contact_waitforcard">Please insert card</string>
    <string name="info_contactless_waitforcard">Please take the card</string>
    <string name="info_card_read">card reading</string>
    <string name="info_select_card_type">Select card type</string>
    <string name="info_open_device_success">Open device successfully</string>
    <string name="info_open_device_failed">Failed to open device, error code:</string>
    <string name="btn_id_card_open">Device on</string>
    <string name="btn_id_card_close">Device off</string>
    <string name="btn_id_card_cancle">Cancle Read</string>
    <string name="btn_id_card_info">get Card Info</string>
    <string name="btn_id_card_readCard">Read Card</string>
    <string name="btn_serial_open">Open Serial</string>
    <string name="btn_serial_close">Close Serial</string>
    <string name="btn_serial_send">Send Data</string>
    <string name="btn_serial_receive">Receive Data</string>
    <string name="btn_sytem_reboot">Reboot</string>
    <string name="btn_sytem_shutdown">shut Down</string>
    <string name="btn_sytem_uninstall">uninstall apk</string>
    <string name="btn_sytem_install">install apk</string>
    <string name="btn_sytem_settime">set Time</string>
    <string name="btn_sytem_getdevice_msg">get Device Manager</string>
    <string name="btn_sytem_getuinonpaysn">get UinonPay Sn</string>
    <string name="button_serial_port_test">Serial Prot</string>
</resources>