<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"     
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="@dimen/device_padding" >
        <TextView 
            android:layout_height="0dp"
            android:layout_weight="8"
            android:id="@+id/scan_text"
            android:layout_marginBottom="3dp"
            android:text="@string/button_serial_port_test"
            android:layout_width="match_parent"
            style="@style/txtStyle"/>
       <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" >
       <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:scrollbars="horizontal" >
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serial_open"
                style="@style/btn_list_style"
                android:text="@string/btn_serial_open"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                android:id="@+id/serial_receive"
                style="@style/btn_list_style"
                android:text="@string/btn_serial_receive"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                android:id="@+id/serial_send"
                style="@style/btn_list_style"
                android:text="@string/btn_serial_send"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                android:id="@+id/serial_close"
                style="@style/btn_list_style"
                android:text="@string/btn_serial_close"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                android:id="@+id/scan_clear"
                style="@style/btn_list_style"
                android:text="@string/btn_clear_content"/>
        </LinearLayout>
        </HorizontalScrollView>
     </LinearLayout>
