<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/device_padding"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin" >
        <TextView
            android:id="@+id/print_text"
            style="@style/txtStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/btn_padding"
            android:layout_weight="8"
            android:text="@string/test_printer" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:scrollbars="horizontal" >

                <Button
                    android:id="@+id/print_open"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_printer_open" />

                <Button
                    android:id="@+id/print_print"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_printer_print" />

                <Button
                    android:id="@+id/print_loop"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/info_print_times" />

                <Button
                    android:id="@+id/print_close"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_printer_clsoe" />

                <Button
                    android:id="@+id/print_clear"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_clear_content" />
            </LinearLayout>
        </HorizontalScrollView>

</LinearLayout>