<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="@dimen/device_padding" >
        <TextView 
            android:layout_height="0dp"
            android:id="@+id/mag_text"
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/btn_padding"
            style="@style/txtStyle"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6" >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:scrollbars="horizontal" >
            <Button 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idCard_open"
                style="@style/btn_list_style"
                android:text="@string/btn_id_card_open"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                style="@style/btn_list_style"
                android:id="@+id/idCard_close"
                android:text="@string/btn_id_card_close"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                style="@style/btn_list_style"
                android:id="@+id/idCard_readcard"
                android:text="@string/btn_id_card_readCard"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                style="@style/btn_list_style"
                android:id="@+id/idCard_info"
                android:text="@string/btn_id_card_info"/>
            <Button 
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                style="@style/btn_list_style"
                android:id="@+id/idCard_cancle"
                android:text="@string/btn_id_card_cancle"/>
            <TextView 
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
            <Button 
               	android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/btn_padding"
                android:layout_height="wrap_content"
                android:id="@+id/mag_clear"
                style="@style/btn_list_style"
                android:text="@string/btn_clear_content"/>
        </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
