<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/device_padding"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
        <TextView
            android:id="@+id/emv_text"
            style="@style/txtStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/btn_padding"
            android:layout_weight="8" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:scrollbars="horizontal" >

                <Button
                    android:id="@+id/emv_start"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_emv_start" />

                <Button
                    android:id="@+id/emv_electronic_cash"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_electronic_cash" />

                <Button
                    android:id="@+id/emv_electronic_cash_inquiry"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_electronic_cash_inquiry" />

                <Button
                    android:id="@+id/emv_set_param"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_emv_setting_param" />

                <Button
                    android:id="@+id/emv_stop"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_emv_close" />

                <Button
                    android:id="@+id/emv_clear"
                    style="@style/btn_list_style"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/btn_padding"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_clear_content" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
